@@ -16,16 +16,6 @@ end_comment
 
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|Reader
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -48,23 +38,13 @@ name|lucene
 operator|.
 name|analysis
 operator|.
-name|Analyzer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
 name|TokenStream
 import|;
 end_import
+
+begin_comment
+comment|/**  * validate that assertions are enabled during tests  */
+end_comment
 
 begin_class
 DECL|class|TestAssertions
@@ -74,149 +54,6 @@ name|TestAssertions
 extends|extends
 name|LuceneTestCase
 block|{
-DECL|method|testBasics
-specifier|public
-name|void
-name|testBasics
-parameter_list|()
-block|{
-try|try
-block|{
-assert|assert
-name|Boolean
-operator|.
-name|FALSE
-operator|.
-name|booleanValue
-argument_list|()
-assert|;
-name|fail
-argument_list|(
-literal|"assertions are not enabled!"
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|AssertionError
-name|e
-parameter_list|)
-block|{
-assert|assert
-name|Boolean
-operator|.
-name|TRUE
-operator|.
-name|booleanValue
-argument_list|()
-assert|;
-block|}
-block|}
-DECL|class|TestAnalyzer1
-specifier|static
-class|class
-name|TestAnalyzer1
-extends|extends
-name|Analyzer
-block|{
-annotation|@
-name|Override
-DECL|method|createComponents
-specifier|protected
-name|TokenStreamComponents
-name|createComponents
-parameter_list|(
-name|String
-name|fieldName
-parameter_list|,
-name|Reader
-name|aReader
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
-DECL|class|TestAnalyzer2
-specifier|static
-specifier|final
-class|class
-name|TestAnalyzer2
-extends|extends
-name|Analyzer
-block|{
-annotation|@
-name|Override
-DECL|method|createComponents
-specifier|protected
-name|TokenStreamComponents
-name|createComponents
-parameter_list|(
-name|String
-name|fieldName
-parameter_list|,
-name|Reader
-name|aReader
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
-DECL|class|TestAnalyzer3
-specifier|static
-class|class
-name|TestAnalyzer3
-extends|extends
-name|Analyzer
-block|{
-annotation|@
-name|Override
-DECL|method|createComponents
-specifier|protected
-name|TokenStreamComponents
-name|createComponents
-parameter_list|(
-name|String
-name|fieldName
-parameter_list|,
-name|Reader
-name|aReader
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
-DECL|class|TestAnalyzer4
-specifier|static
-class|class
-name|TestAnalyzer4
-extends|extends
-name|Analyzer
-block|{
-annotation|@
-name|Override
-DECL|method|createComponents
-specifier|protected
-name|TokenStreamComponents
-name|createComponents
-parameter_list|(
-name|String
-name|fieldName
-parameter_list|,
-name|Reader
-name|aReader
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
 DECL|class|TestTokenStream1
 specifier|static
 class|class
@@ -286,50 +123,6 @@ name|testTokenStreams
 parameter_list|()
 block|{
 operator|new
-name|TestAnalyzer1
-argument_list|()
-expr_stmt|;
-operator|new
-name|TestAnalyzer2
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-operator|new
-name|TestAnalyzer3
-argument_list|()
-expr_stmt|;
-name|fail
-argument_list|(
-literal|"TestAnalyzer3 should fail assertion"
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|AssertionError
-name|e
-parameter_list|)
-block|{     }
-try|try
-block|{
-operator|new
-name|TestAnalyzer4
-argument_list|()
-expr_stmt|;
-name|fail
-argument_list|(
-literal|"TestAnalyzer4 should fail assertion"
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|AssertionError
-name|e
-parameter_list|)
-block|{     }
-operator|new
 name|TestTokenStream1
 argument_list|()
 expr_stmt|;
@@ -337,16 +130,20 @@ operator|new
 name|TestTokenStream2
 argument_list|()
 expr_stmt|;
+name|boolean
+name|doFail
+init|=
+literal|false
+decl_stmt|;
 try|try
 block|{
 operator|new
 name|TestTokenStream3
 argument_list|()
 expr_stmt|;
-name|fail
-argument_list|(
-literal|"TestTokenStream3 should fail assertion"
-argument_list|)
+name|doFail
+operator|=
+literal|true
 expr_stmt|;
 block|}
 catch|catch
@@ -354,7 +151,16 @@ parameter_list|(
 name|AssertionError
 name|e
 parameter_list|)
-block|{     }
+block|{
+comment|// expected
+block|}
+name|assertFalse
+argument_list|(
+literal|"TestTokenStream3 should fail assertion"
+argument_list|,
+name|doFail
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
